--- a/web/static/styles/_weathercard.css
+++ b/web/static/styles/_weathercard.css
@@ -88,7 +88,7 @@
 }
 
 .info > p {
-    width: 72%;
+    width: 72.5%;
     margin-left: auto;    
     margin-right: auto;
     text-align: left;
